--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,63 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100vw;
+  height: 100vh;
+
+  background-color: azure;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.rutulys {
+  width: 300px;
+  height: 300px;
+  border-radius: 50%;
+  background-color: bisque;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 50px;
+  border: solid 3px black;
+
+}
+
+.mygtukas1 {
+  width: 100px;
+  height: 50px;
+  margin: 10px;
+  color: azure;
+  background-color: red;
+  
+  
+}
+
+.mygtukas2 {
+  width: 100px;
+  height: 50px;
+  margin: 10px;
+  color: azure;
+  background-color: blue;
+}
+
+.mygtukas3 {
+  width: 100px;
+  height: 50px;
+  margin: 10px;
+  color: azure;
+  background-color: green;
+}
+
+.mygtukas4 {
+  width: 100px;
+  height: 50px;
+  margin: 10px;
+  color: azure;
+  background-color: black;
 }
